--- a/style.css
+++ b/style.css
@@ -69,19 +69,24 @@ section{
 .lastHalf{
     box-shadow: 10px 10px 50px rgb(46, 46, 46);
     border-radius: 7px;
-    height: 60%;
-    width: 38%;
-    float: left;
+    height: 50%;
+    float:left;
+    width: 90%;
+    text-align: center;
+
+    
 }
 .boxHeadLine{
     color:darkgreen;
 }
 #boxLeftBorder1{
     border-left:5px rgb(17, 81, 17) solid;
+    border-right:5px rgb(17, 81, 17) solid;
     
 }
 #boxLeftBorder2{
     border-left:5px rgb(38, 38, 196) solid;
+    border-right:5px rgb(38, 38, 196) solid;
    
 }
 footer{
